--- a/platformio.ini
+++ b/platformio.ini
@@ -8,28 +8,30 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+; [env:nodemcuv2]
+; platform = espressif8266
+; board = nodemcuv2
+; framework = arduino
+
+[env:d1_mini]
 platform = espressif8266
-board = nodemcuv2
+board = d1_mini
 framework = arduino
 build_flags =
-	; set your debug output (default=Serial)
 	-D DEBUG_ESP_PORT=Serial
-	; comment the folowing line to enable Websockets debugging
 	-D NODEBUG_WEBSOCKETS
-	; comment the folowing line to enable WiFi debugging
 	-D NDEBUG
-	; comment the following line to enable SinricPro debugging
 	-D NODEBUG_SINRIC
 monitor_speed = 115200
 upload_speed = 921600
 lib_deps =
 	alanswx/ESPAsyncWiFiManager @ ^0.22
 	me-no-dev/ESP Async WebServer @ ^1.2.3
-	teimore/PushbulletAPI @ ^0.2
+	; teimore/PushbulletAPI @ ^0.2
 	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
 	bblanchon/ArduinoJson @ ^6.16.1
 	sinricpro/SinricPro @ ^2.7.1
 	links2004/WebSockets @ ^2.3.1
 	thomasfredericks/Bounce2 @ ^2.55
 	mathertel/OneButton @ 0.0.0-alpha+sha.eb583d713a
+	fastled/FastLED @ ^3.3.3
