Restart do código

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,20 +17,15 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-build_flags =
-	-D DEBUG_ESP_PORT=Serial
-	-D NODEBUG_WEBSOCKETS
-	-D NDEBUG
-	-D NODEBUG_SINRIC
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps =
-	alanswx/ESPAsyncWiFiManager @ ^0.22
-	me-no-dev/ESP Async WebServer @ ^1.2.3
-	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
-	bblanchon/ArduinoJson @ ^6.16.1
-	sinricpro/SinricPro @ ^2.7.1
-	links2004/WebSockets @ ^2.3.1
-	thomasfredericks/Bounce2 @ ^2.55
-	mathertel/OneButton @ 0.0.0-alpha+sha.eb583d713a
-	fastled/FastLED @ ^3.3.3
+; lib_deps =
+; 	alanswx/ESPAsyncWiFiManager @ ^0.22
+; 	me-no-dev/ESP Async WebServer @ ^1.2.3
+; 	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
+; 	bblanchon/ArduinoJson @ ^6.16.1
+; 	sinricpro/SinricPro @ ^2.7.1
+; 	links2004/WebSockets @ ^2.3.1
+; 	thomasfredericks/Bounce2 @ ^2.55
+; 	mathertel/OneButton @ 0.0.0-alpha+sha.eb583d713a
+; 	fastled/FastLED @ ^3.3.3
