--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,21 @@ board = d1_mini
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+lib_deps =
+  khoih-prog/ESPAsync_WiFiManager @ ^1.12.2
+  me-no-dev/ESP Async WebServer@>=1.2.3
+  me-no-dev/ESPAsyncTCP@>=1.2.2
+  me-no-dev/AsyncTCP@>=1.1.1
+  khoih-prog/ESP_DoubleResetDetector@>=1.3.1
+  lorol/LittleFS_esp32@>=1.0.6
+
+build_flags =
+; set your debug output (default=Serial)
+ -D DEBUG_ESP_PORT=Serial
+; comment the folowing line to enable WiFi debugging
+; -D NDEBUG
+
+
 ; lib_deps =
 ; 	alanswx/ESPAsyncWiFiManager @ ^0.22
 ; 	me-no-dev/ESP Async WebServer @ ^1.2.3
