--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,8 @@ lib_deps =
   me-no-dev/AsyncTCP@>=1.1.1
   khoih-prog/ESP_DoubleResetDetector@>=1.3.1
   lorol/LittleFS_esp32@>=1.0.6
+  fastled/FastLED @ ^3.5.0
+  mathertel/OneButton @ ^2.0.3
 
 build_flags =
 ; set your debug output (default=Serial)
