--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ lib_deps =
   lorol/LittleFS_esp32@>=1.0.6
   fastled/FastLED @ ^3.5.0
   mathertel/OneButton @ ^2.0.3
+  jonblack/arduino-fsm @ ^2.2.0
 
 build_flags =
 ; set your debug output (default=Serial)
