Integração com alexa

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,21 +29,9 @@ lib_deps =
   fastled/FastLED @ ^3.5.0
   mathertel/OneButton @ ^2.0.3
   jonblack/arduino-fsm @ ^2.2.0
+  vintlabs/FauxmoESP @ ^3.4
 
 build_flags =
-; set your debug output (default=Serial)
- -D DEBUG_ESP_PORT=Serial
-; comment the folowing line to enable WiFi debugging
+;  -D DEBUG_ESP_PORT=Serial
 ; -D NDEBUG
-
-
-; lib_deps =
-; 	alanswx/ESPAsyncWiFiManager @ ^0.22
-; 	me-no-dev/ESP Async WebServer @ ^1.2.3
-; 	jfturcot/SimpleTimer @ 0.0.0-alpha+sha.b30890b8f7
-; 	bblanchon/ArduinoJson @ ^6.16.1
-; 	sinricpro/SinricPro @ ^2.7.1
-; 	links2004/WebSockets @ ^2.3.1
-; 	thomasfredericks/Bounce2 @ ^2.55
-; 	mathertel/OneButton @ 0.0.0-alpha+sha.eb583d713a
-; 	fastled/FastLED @ ^3.3.3
+; -g -DDEBUG_FAUXMO=Serial -DDEBUG_FAUXMO_VERBOSE_TCP=0 -DDEBUG_FAUXMO_VERBOSE_UDP=0 -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
