--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ lib_deps =
   mathertel/OneButton @ ^2.0.3
   jonblack/arduino-fsm @ ^2.2.0
   vintlabs/FauxmoESP @ ^3.4
+  bblanchon/ArduinoJson @ ^6.19.4
 
 build_flags =
 ;  -D DEBUG_ESP_PORT=Serial
