Efeito nos leds para info de status

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,6 +31,7 @@ lib_deps =
   jonblack/arduino-fsm @ ^2.2.0
   vintlabs/FauxmoESP @ ^3.4
   bblanchon/ArduinoJson @ ^6.19.4
+  kitesurfer1404/WS2812FX @ ^1.4.0
 
 build_flags =
 ;  -D DEBUG_ESP_PORT=Serial
