--- a/platformio.ini
+++ b/platformio.ini
@@ -32,8 +32,9 @@ lib_deps =
   vintlabs/FauxmoESP @ ^3.4
   bblanchon/ArduinoJson @ ^6.19.4
   kitesurfer1404/WS2812FX @ ^1.4.0
+  rupakpoddar/ESP8266 Webhooks @ ^1.0.0
 
 build_flags =
 ;  -D DEBUG_ESP_PORT=Serial
 ; -D NDEBUG
-; -g -DDEBUG_FAUXMO=Serial -DDEBUG_FAUXMO_VERBOSE_TCP=0 -DDEBUG_FAUXMO_VERBOSE_UDP=0 -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
+; -g -DDEBUG_FAUXMO=Serial -DDEBUG_FAUXMO_VERBOSE_TCP=1 -DDEBUG_FAUXMO_VERBOSE_UDP=1 -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
